# StanX-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  events.rs  initialisemarket.rs  limitorder.rs  marketorder.rs  railpack.json  railway.toml  state.rs
.sqlx/: query-67a6f5d3b86702013c635e3a3bab48fccf52dc11b2db3e8374049d297995e267.json  query-ce0a97abba0ea49d46b7cc97bf17cbd8d879d1a6c4efb01b180c7064ce0d38d5.json
backend/: .env.example  Cargo.toml
backend/src/: bootstrap.rs  main.rs  middleware.rs  receiver.rs
backend/src/routes/: health.rs  market.rs  mod.rs  user.rs  ws.rs
backend/src/state/: mod.rs  state.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/state/: mod.rs
db/: .env.example  Cargo.toml
db/migrations/: 20260305233528_init.sql  20260310000000_events_and_orderbook.sql  20260402000000_add_filled_quantity.sql  20260403000000_market_resolutions.sql
db/src/: lib.rs
db/src/models/: events.rs  mod.rs  user.rs
event-listener/: .env.example  Cargo.toml
event-listener/src/: event_handler.rs  main.rs  types.rs  webhook.rs
stanx-client-sdk/: Cargo.toml
stanx-client-sdk/idls/: prediction_market.json
ws/: .env.example  Cargo.toml
ws/src/: main.rs  room_manager.rs  types.rs
