[workspace]
resolver = "3"
packages = ["db", "backend", "ws", "common"]
members = ["db", "backend", "ws", "common", "event-listener", "stanx-client-sdk"]

[workspace.dependencies]
actix-web        = "4.13.0"
actix-ws         = "0.3.1"
actix            = "0.13"
actix-web-actors = "4.3.0"
tokio = { version = "1.49.0", features = ["full"] }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
uuid         = { version = "1.11.0", features = ["v4", "serde"] }
anyhow       = "1.0.100"
dotenvy      = "0.15.7"
snowflake    = "1.3.0"
anchor-lang = "0.32.1"
solana-clock               = "3.0.1"
solana-client              = "2.1.7"
solana-sdk                 = "2.1.7"
solana-transaction-status  = "2.1.7"
solana-program             = "2.1.7"
solana-pubkey              = "2.1.7"
borsh                      = "1.5.3"
log                        = "0.4"
env_logger                 = "0.11"
base64                     = "0.22"
futures-util               = "0.3"
chrono                     = { version = "0.4", features = ["serde"] }
db     = { path = "db" }
ws     = { path = "ws" }
common = { path = "common" }
axum             = "0.7"
tower            = "0.4"
tower-http       = { version = "0.5", features = ["cors"] }
redis = { version = "*" }