[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-web-actors = "4.3.0"
actix = "0.13"
actix-ws = "0.3.0"
anyhow = "1.0.100"
db ={ path = "../db"}
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.2.0" , features = ["rust_crypto"]}
serde = "1.0.228"
serde_json = "1.0.147"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
