[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum             = { workspace =  true }
tower            = { workspace =  true }
tower-http       = { workspace =  true }
anyhow           = { workspace = true }
db               = { workspace = true }
dotenvy          = { workspace = true }
jsonwebtoken     = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["full"] }
uuid             = { workspace = true }
