[package]
name = "event-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
solana-client = "2.1.7"
solana-sdk = "2.1.7"
solana-transaction-status = "2.1.7"
solana-program = "2.1.7"
solana-pubkey = "2.1.7"
borsh = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

# Local dependencies
db = { path = "../db" }
common = { path = "../common" }
