[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web    = { workspace = true }
actix-ws     = { workspace = true }
dotenvy      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
snowflake    = { workspace = true }
solana-clock = { workspace = true }
tokio        = { workspace = true }
